# llm-runner

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  AGENTS.md  CODERABBIT_REMEDIATION_PLAN.md  CRITICAL_PATCH_CHECKLIST.md  LICENSE  PHASE5_QUALITY_CHECK_REPORT.md  PRD.md  QUICKSTART.md  README.md  WAVE2_EXECUTION_CHECKLIST.md  benchmark_mtp_vs_nonmtp.sh  pyproject.toml  pyrightconfig.json  run_models_tui.py  run_opencode_models.py  run_opencode_models.sh  sonar-project.properties
.beads/: config.yaml
.cursor/hooks/state/: continual-learning-index.json  continual-learning.json
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  copilot-setup-steps.yml
.opencode/: package-lock.json
.opencode/agents/: architect.md  build-engineer.md  ci-fixer.md  debugger.md  devops-github-actions.md  diagnostics.md  documentation.md  gpu-expert.md  orchestrator.md  profile-engineer.md  python-backend.md  python-qa.md  python-reviewer.md  release-engineer.md  security.md  tui-developer.md
.opencode/command/: speckit.verify.run.md
.opencode/commands/: build.md  lint.md  pre-commit.md  test.md
.opencode/magic-context/historian/: ses_1234ed046ffeKQkEOQArpZ5uo9-incremental-ses_1234ed046ffeKQkEOQArpZ5uo9-1-2-fallback-9-1781819242803.xml
.opencode/plans/: coderabbit-full-sweep.md  dead-code-removal-plan.md  module_split.md  refactor-submodules.md
.serena/: project.yml
.serena/memories/fixes/: in-progress.md
.specify/: extension-catalogs.yml  extensions.yml  feature.json
.specify/extensions/: .registry
.specify/extensions/verify/: README.md
.specify/integrations/: opencode.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
docs/: ARCHITECTURE.md  PRD.md  spec-001-prd-coverage.md
docs/plans/: 2026-06-18-fix-sycl-launch-env.md  2026-06-18-fix-tui-builtin-profile-persistence.md  2026-06-18-fix-tui-gpu-stats-refresh.md  2026-06-18-slot-log-pane-redesign.md  2026-06-18-slot-stats-persistence.md  beellama-dflash-smaller-model-plan.md  prd-spec-001-extension-patch.md
docs/reviews/: prd-spec-001-compliance-review.md
llama_cli/: cli_parser.py  server_runner.py  tui_app.py
llama_manager/: __init__.py  colors.py  config.py  config_builder.py  log_buffer.py  process_manager.py  server.py
scripts/: bench_gguf_parse.py
specs/001-m3-profiling-presets/: plan.md  spec.md  tasks.md
specs/001-m3-profiling-presets/checklists/: requirements.md
specs/001-m4-op-hardening/: data-model.md  plan.md  quickstart.md  research-gguf.md  research-httpx.md  research-lockfiles.md  research-rich-live.md  research.md  spec.md  tasks.md
specs/001-m4-op-hardening/checklists/: requirements.md
specs/001-m4-op-hardening/contracts/: smoke-api.md
specs/001-prd-mvp-spec/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-prd-mvp-spec/checklists/: implementation-readiness.md  implementation.md  plan-quality.md  requirements.md
specs/001-prd-mvp-spec/contracts/: actionable-error-contract.md  dry-run-canonical-contract.md  observability-artifact-contract.md
specs/002-build-setup/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-build-setup/contracts/: cli-json-contract.md
specs/002-logging/: plan.md
specs/llama-manager-simplification/: overview.md  phase-1-quick-wins.md  phase-2-api-hygiene.md  phase-3-error-config.md  phase-4-structural.md  phase-5-cleanup.md
src/: run_models_tui.py
src/llama_cli/: __init__.py  build_cli.py  cli_parser.py  colors.py  doctor_cli.py  dry_run.py  gpu_collectors.py  profile_cli.py  server_runner.py  setup_cli.py  smoke_cli.py  tui_app.py  ui_output.py
src/llama_cli/commands/: _output.py  _subprocess.py  _toolchain.py  build.py  doctor.py  dry_run.py  profile.py  setup.py  smoke.py  tui.py
src/llama_cli/tui/: __init__.py  constants.py  controller.py  dashboard_panels.tcss  modals.tcss  model.py  system_status.tcss  textual_app.py  textual_app.tcss  types.py  viewmodel.py
src/llama_manager/: __init__.py  benchmark.py  build_pipeline.py  config.py  config_builder.py  dashboard_controller.py  dashboard_view_model.py  dry_run.py  gpu_stats.py  log_buffer.py  logging_setup.py  metadata.py  model_index.py  process_manager.py  profile_cache.py  profile_orchestrator.py  reports.py  risk_ack.py  run_profile_store.py  server.py  setup_venv.py  slot_manager.py  slot_profile_store.py  slot_state.py  slot_stats.py  smoke.py  system_stats.py  toolchain.py
src/llama_manager/benchmark/: __init__.py  parser.py  runner.py
src/llama_manager/build_pipeline/: __init__.py  _context.py  lock.py  models.py  orchestration.py  pipeline.py  status.py  utils.py
src/llama_manager/common/: __init__.py  constants.py  file_ops.py  profile_io.py  security.py  text.py  validators.py
src/llama_manager/config/: __init__.py  builder.py  defaults.py  (+7 more)
src/scripts/: generate_gguf_fixtures.py
src/tests/: conftest.py  helpers.py  helpers_determinism.py  test_benchmark.py  test_build_cli.py  test_build_config.py  test_build_pipeline.py  test_cli_parser.py  test_config.py  test_doctor_cli.py  test_dry_run_artifacts.py  test_dry_run_flag_bundles.py  test_dry_run_schema.py  test_dry_run_validation_contracts.py  test_foundation_contracts.py  test_fr003_007_011_contracts.py  test_gguf_fixtures_gen.py  test_json_contract.py  test_launch_flow.py  test_logging_setup.py  test_m2_foundation.py  test_m2_provenance.py  test_metadata.py  test_phase7_dry_run_bundles.py  test_phase7_dry_run_smoke_flags.py  test_phase7_json_schema.py  test_phase7_lifecycle.py  test_phase7_parity_tui_cli.py  test_process_manager.py  test_profile_cache.py  test_profile_cli.py  test_profile_provenance.py  test_regression_m1_contracts.py  test_reports.py  test_sc006_performance.py  test_server.py  test_server_runner.py  test_setup_cli.py  test_setup_venv.py  test_smoke.py  (+17 more)
tests/: conftest.py  test_config.py  test_foundation_contracts.py  test_process_manager.py  test_server.py
(+207 files in other folders)
