[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-runner"
version = "0.1.0"
description = "TUI for managing llama.cpp server instances (Intel SYCL + NVIDIA CUDA)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "rich>=13.0.0",
    "psutil>=5.9.0",
]

[project.scripts]
llm-runner = "llama_cli.server_runner:cli_main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.9",
    "pyright>=1.1.390",
    "pre-commit>=4.0",
    "pip-audit>=2.7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/llama_cli", "src/llama_manager"]

# ---------------------------------------------------------------------------
# Ruff — linter + formatter
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "S",   # flake8-bandit (security)
]
ignore = [
    "D",             # docstring style checks are out of scope for this phase
    "E501",          # line length — handled by formatter
    "B008",          # function call in default argument
    "B006",          # mutable default argument — intentional in config defaults
    "S603",          # subprocess call — intentional in process_manager
    "S607",          # partial executable path — intentional (user-configured paths)
    "S110",          # try-except-pass — intentional in thread pipe readers, cleanup, and GPU stat fallbacks
    "S108",          # /tmp usage — test fixtures for temp paths
    "S104",          # network binds — test coverage for security checks (uses 192.168.x.x instead)
]

[tool.ruff.lint.per-file-ignores]
"src/tests/*" = ["S101"]  # assert is fine in tests

[tool.ruff.lint.isort]
known-first-party = ["llama_cli", "llama_manager"]

# ---------------------------------------------------------------------------
# Pyright — type checker
# ---------------------------------------------------------------------------
[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
include = ["src/llama_cli", "src/llama_manager", "src/tests", "src/run_opencode_models.py", "src/run_models_tui.py"]
exclude = [".venv", "dist"]
reportMissingImports = true
reportMissingModuleSource = false

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["src/tests"]
addopts = "-v --tb=short"

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["src/llama_cli", "src/llama_manager"]
omit = ["src/tests/*"]

[tool.coverage.report]
show_missing = true

[tool.coverage.xml]
output = "coverage.xml"
