[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-runner"
version = "0.1.0"
description = "TUI for managing llama.cpp server instances (Intel SYCL + NVIDIA CUDA)"
readme = "README.md"
requires-python = ">= 3.14"
dependencies = [
    "loguru>=0.7.3",
    "rich>=15.0.0",
    "textual>=8.2.7,<9",
    "psutil>=7.2.2",
    "httpx>=0.28.1",
    "gguf>=0.19.0",
]

[project.scripts]
llm-runner = "llama_cli.server_runner:cli_main"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.14",
    "pyright>=1.1.409",
    "pre-commit>=4.6.0",
    "pip-audit>=2.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/llama_cli", "src/llama_manager"]

[tool.hatch.build.targets.wheel.force-include]
"src/llama_cli/tui/textual_app.tcss" = "llama_cli/tui/textual_app.tcss"
"src/llama_cli/tui/system_status.tcss" = "llama_cli/tui/system_status.tcss"
"src/llama_cli/tui/dashboard_panels.tcss" = "llama_cli/tui/dashboard_panels.tcss"
"src/llama_cli/tui/modals.tcss" = "llama_cli/tui/modals.tcss"

[tool.hatch.build.targets.wheel.sources]
"src" = ""

# ---------------------------------------------------------------------------
# Ruff — linter + formatter
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py314"
line-length = 100
exclude = ["src/llama.cpp"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "S",   # flake8-bandit (security)
]
ignore = [
    "D",             # docstring style checks are out of scope for this phase
    "E402",          # module level import not at top — false positive with from __future__ + docstring
    "E501",          # line length — handled by formatter
    "B008",          # function call in default argument
    "B006",          # mutable default argument — intentional in config defaults
    "S603",          # subprocess call — intentional in process_manager
    "S607",          # partial executable path — intentional (user-configured paths)
    "S110",          # try-except-pass — intentional in thread pipe readers, cleanup, and GPU stat fallbacks
    "S108",          # /tmp usage — test fixtures for temp paths
    "S104",          # network binds — test coverage for security checks (uses 192.168.x.x instead)
]

[tool.ruff.lint.per-file-ignores]
"src/tests/**/*.py" = ["S101"]  # assert is fine in tests

[tool.ruff.lint.isort]
known-first-party = ["llama_cli", "llama_manager", "tests"]

# ---------------------------------------------------------------------------
# Pyright — type checker
# ---------------------------------------------------------------------------
[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "standard"
include = ["src/llama_cli", "src/llama_manager", "src/tests"]
exclude = [".venv", "dist", "**/node_modules", "**/__pycache__", "**/.*"]
reportMissingImports = true
reportMissingModuleSource = false

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["src/tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
norecursedirs = [".*", ".venv", "dist", "node_modules", "venv"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["src"]
relative_files = true
omit = ["src/tests/**"]

[tool.coverage.report]
show_missing = true

[tool.coverage.xml]
output = "coverage.xml"
